utility-add: POST Request Handler Api for newsale

--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 // TODO: USE COOKIES 
 // TODO: use react hook - useOptimistic (after Production Release)
+// REMINDER: Remove digest message from @app/console/error.tsx before production release
